# DuckDnsClient

./: CMakeLists.txt  README.md  run.sh
files/: README.md  ddns-update.sh  duckdnsclient.service
include/: client.hpp  config.hpp  curl.hpp  utility.hpp
source/: client.cpp  config.cpp  curl.cpp  main.cpp  utility.cpp
